tests/sksl/errors/ReservedNameTexture.glsl
### Compilation failed:

error: 1: name 'itexture1D' is reserved
int itexture1D;
    ^^^^^^^^^^
error: 2: name 'itexture2D' is reserved
int itexture2D;
    ^^^^^^^^^^
error: 3: name 'itexture3D' is reserved
int itexture3D;
    ^^^^^^^^^^
error: 4: name 'itexture1DArray' is reserved
int itexture1DArray;
    ^^^^^^^^^^^^^^^
error: 5: name 'itexture2DArray' is reserved
int itexture2DArray;
    ^^^^^^^^^^^^^^^
error: 6: name 'itexture2DRect' is reserved
int itexture2DRect;
    ^^^^^^^^^^^^^^
error: 7: name 'itexture2DMS' is reserved
int itexture2DMS;
    ^^^^^^^^^^^^
error: 8: name 'itexture2DMSArray' is reserved
int itexture2DMSArray;
    ^^^^^^^^^^^^^^^^^
error: 9: name 'itextureBuffer' is reserved
int itextureBuffer;
    ^^^^^^^^^^^^^^
error: 10: name 'itextureCube' is reserved
int itextureCube;
    ^^^^^^^^^^^^
error: 11: name 'itextureCubeArray' is reserved
int itextureCubeArray;
    ^^^^^^^^^^^^^^^^^
error: 13: name 'utexture1D' is reserved
int utexture1D;
    ^^^^^^^^^^
error: 14: name 'utexture2D' is reserved
int utexture2D;
    ^^^^^^^^^^
error: 15: name 'utexture3D' is reserved
int utexture3D;
    ^^^^^^^^^^
error: 16: name 'utexture1DArray' is reserved
int utexture1DArray;
    ^^^^^^^^^^^^^^^
error: 17: name 'utexture2DArray' is reserved
int utexture2DArray;
    ^^^^^^^^^^^^^^^
error: 18: name 'utexture2DRect' is reserved
int utexture2DRect;
    ^^^^^^^^^^^^^^
error: 19: name 'utexture2DMS' is reserved
int utexture2DMS;
    ^^^^^^^^^^^^
error: 20: name 'utexture2DMSArray' is reserved
int utexture2DMSArray;
    ^^^^^^^^^^^^^^^^^
error: 21: name 'utextureBuffer' is reserved
int utextureBuffer;
    ^^^^^^^^^^^^^^
error: 22: name 'utextureCube' is reserved
int utextureCube;
    ^^^^^^^^^^^^
error: 23: name 'utextureCubeArray' is reserved
int utextureCubeArray;
    ^^^^^^^^^^^^^^^^^
22 errors
